Update azure-pipelines.yml for Azure Pipelines
DependsON dependency is added to Publish stage: if the build fails, the app will not be published

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,6 +78,7 @@ stages:
 
 #---------------------------------------PUBLISH STAGE
 - stage: Publish
+  dependsOn: Build #if the build fails, the app will not be published
   jobs:
     - job: PublishingBy_ConvertingTOZIP
       steps:
