--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,67 +2,108 @@
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
-pr: none #What is pr?
+#pr: none #What is pr?
 
 #trigger: # sets a trigger on main for any change made to main
 #- main
-
+pr: none #pr means the trigger wont go off for ANY change to main branch
 trigger: #To specify which thing in the branch to trigger a run
   branches:
-    include:
+    include: #Will SEARCH on main for the path to trigger
       - main  
   paths:
     include:
-      - Official_GroupProject2
+      - OFFICIAL_PROJECT2 # This entir sectio here is made to trigger on any changes
+      #to the path OFFICIAL_PROJECT2
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: 'Official_GroupProject2/ApiLayer/ApiLayer.sln' # this is the path to your sln file in proj - relative path in your repo
+  solution: 'OFFICIAL_PROJECT2/*.sln' # this is the path to your sln file in proj - relative path in your repo
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-stages: #This is the build stage
-  -stage: prep
-    jobs: 
-      -job: sdk_download # the job to download correct SDK
-        displayName: download the most up to date SDK for Dotnet Core
-        steps:
-        - task: UseDotNet@2
-          inputs:
-            packageType: 'sdk'
-            version: '6.x'
-  -stage: build
-    jobs:
-    -job: build the app
+  workingDirectory: 'OFFICIAL_PROJECT2/'
+
+
+stages:
+
+#---------------------------------------PREP STAGE
+- stage: Prep
+  jobs: 
+    - job: PreppingBy_downloadRequiredSDK #Job name CANNOT have spaces but can have _
+      displayName: download most recent sdk version
       steps:
-      - task: DotNetCoreCLI@2
+      - task: UseDotNet@2
+        displayName: Get the SDK
         inputs:
-          command: 'custom'
-          projects: '$(solution)'
-  -stage: Test
-    jobs:
-    -job: Test the app
-      steps:
-      - task: DotNetCoreCLI@2
-        inputs:
-          command: 'test'
-          projects: '$(solution)'
+          packageType: 'sdk'
+          version: '6.x'
+
+#---------------------------------------BUILD STAGE
+- stage: Build
+  jobs:
+  - job: BuildingBy_InstallReguiredPackages
+    steps:
+    - task: NuGetToolInstaller@1 #tool to install packages
+    #NuGetCommand downloads necessary nuget packages
+    - task: NuGetCommand@2 #Generated using the 'NuGet' task and setting path to solution as $(solution)
+      displayName: restore_the_app
+      inputs:
+        command: 'restore'
+        restoreSolution: '$(solution)'
+        # feedsToUse: 'select'
     
-- task: NuGetToolInstaller@1
+      #Dotnet SDK installed in the prep stage is used to build
+    - task: DotNetCoreCLI@2
+      displayName: build_the_app
+      inputs:
+        command: 'build'
+        projects: '$(solution)'
+        arguments: '--configuration $(buildConfiguration)'
+        workingDirectory: '$(workingDirectory)'
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)' # building solution
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+#---------------------------------------TEST STAGE
+- stage: Test
+  jobs:
+    - job: TestingBy_TBA
+      # steps:
+    # - task: VSTest@2
+    #   inputs:
+    #     platform: '$(buildPlatform)'
+    #     configuration: '$(buildConfiguration)'
+
+
+#---------------------------------------PUBLISH STAGE
+- stage: Publish
+  dependsOn: Build #if the build fails, the app will not be published
+  jobs:
+    - job: PublishingBy_ConvertingTOZIP
+      steps:
+        - task: DotNetCoreCLI@2
+          displayName: Publishing
+          inputs:
+            command: 'publish'
+            publishWebProjects: true
+            workingDirectory: '$(workingDirectory)'
+            projects: $(solution)
+            zipAfterPublish: true #to makke a zip file of the published app
+
+
+#---------------------------------------DEPLOY STAGE
+# - stage: Deploy
+#   jobs:
+#     - job: DeployingBy_AzureAppServiceDEPLOY
+#       displayName: Deploying To Azure App Service to push to website
+#       steps:
+#       - task: AzureRmWebAppDeployment@4
+#         inputs:
+#           ConnectionType: 'AzureRM'
+#           appType: 'webApp'
+#           WebAppName: 'P2_Ecomm_Store' #Will
+#           deployToSlotOrASE: true
+#           ResourceGroupName: 'Group3_P2_Sam_Mominur_Sendes'
+#           SlotName: 'production'
+#           packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
