P2 - Tests in the works, git ignore file configured.

--- a/P2_Sendes/Tests.Project2/Tests.Project2.csproj
+++ b/P2_Sendes/Tests.Project2/Tests.Project2.csproj
@@ -21,4 +21,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ApiLayer\ApiLayer.csproj" />
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    <ProjectReference Include="..\ModelLayer\ModelLayer.csproj" />
+    <ProjectReference Include="..\RepoLayer\RepoLayer.csproj" />
+  </ItemGroup>
 </Project>
