--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-# Marks files
-MarksLessonsLearned.txt
-#ReimbursementApi/
+# P2 Individual folders to ignore when pushing to repo files
+P2_Sendes/
+P2_Mominur/
+SamsFolderforP2/
 
 # User-specific files
 *.rsuser
