--- a/SamsFolderforP2/APILayer/Properties/launchSettings.json
+++ b/SamsFolderforP2/APILayer/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "APILayer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7130;http://localhost:5130",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
