--- a/SamsFolderforP2/APILayer/appsettings.Development.json
+++ b/SamsFolderforP2/APILayer/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:p2group3.database.windows.net,1433;Initial Catalog=P2Group3;Persist Security Info=False;User ID=p2group3;Password=project2groupthree!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
