--- a/SamsFolderforP2/APILayer/Properties/launchSettings.json
+++ b/SamsFolderforP2/APILayer/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29073",
+      "applicationUrl": "http://localhost:5001",
       "sslPort": 44343
     }
   },
@@ -12,7 +12,7 @@
     "APILayer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
