--- a/SamsFolderforP2/APILayer/APILayer.csproj
+++ b/SamsFolderforP2/APILayer/APILayer.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\ModelsLayer\ModelsLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
 </Project>
