--- a/P2_Sendes/RepoLayer/RepoLayer.csproj
+++ b/P2_Sendes/RepoLayer/RepoLayer.csproj
@@ -6,14 +6,17 @@
 
   <ItemGroup>
     <None Remove="System.Data.SqlClient" />
+    <None Remove="Microsoft.Extensions.Configuration.UserSecrets" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>363141c9-4bf0-433a-bcef-0d698d611afb</UserSecretsId>
   </PropertyGroup>
 
 </Project>
