--- a/OFFICIAL_PROJECT2/Final_Project/BusinessLayer/BusinessLayer.csproj
+++ b/OFFICIAL_PROJECT2/Final_Project/BusinessLayer/BusinessLayer.csproj
@@ -6,10 +6,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="BL_INTERFACES\" />
+    <None Remove="VerificationP3\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BL_INTERFACES\" />
+    <Folder Include="VerificationP3\" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
